2*cum + estilo competicion

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Asistencias y Porcentajes</h1>
+    <h1>Asistencias Cubalitro</h1>
     <table id="asistenciasTable">
         <thead>
             <tr>
